<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_list_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/exclusiveCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_exclusive_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/replies_policy_title"
        style="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="?attr/colorAccent" />

    <RadioGroup
        android:id="@+id/repliesPolicyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/repliesPolicyFollowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replies_policy_name_followed" />

        <RadioButton
            android:id="@+id/repliesPolicyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replies_policy_name_list" />

        <RadioButton
            android:id="@+id/repliesPolicyNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replies_policy_name_none" />
    </RadioGroup>
</LinearLayout>
